# vibe_coding_w2-2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: issue-assigner.yml  issue-comment.yml  pr-assigner.yml  pr-code-review.yml  pr-comment.yml  pr-labeler.yml  test.yml
backend/app/: agent.py  main.py
backend/app/models/: chat.py
backend/app/routers/: chat.py
frontend/: app.py
