[project]
name = "vibe-coding-w2-1-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "yozmngood",email = "yozmngood@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "vibe_coding_w2_1"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"